kubernetes/infrastructure/database-api/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: database-api
  labels:
    app: database-api
spec:
  replicas: 3
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: database-api
        version: latest
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: cloud.google.com/gke-preemptible
                    operator: Exists
      containers:
        - name: database-api
          image: tenlastic/database-api:latest
          livenessProbe:
            httpGet:
              path: /databases
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
---
apiVersion: v1
kind: Service
metadata:
  name: database-api
  labels:
    app: database-api
    service: database-api
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: database-api
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: database-api
spec:
  hosts:
    - api.tenlastic.com
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  http:
    - match:
        - uri:
            prefix: "/databases"
      route:
        - destination:
            host: database-api
            port:
              number: 3000
